--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -144,7 +144,6 @@ h1, h2 {
     width: 100%;
 }
 
-
 .question-card {
     background-color: var(--body-bg);
     border-radius: 8px;
@@ -217,8 +216,6 @@ h1, h2 {
     background-color: #7FC8F8;
     color: #fff;
 }
-
-
 
 .comment-section {
     margin-top: 20px;
@@ -337,8 +334,7 @@ label {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
