🩹 fix - #6 리뷰 페이징 버튼 스타일 변경

--- a/src/main/resources/static/css/review/reviewMain.css
+++ b/src/main/resources/static/css/review/reviewMain.css
@@ -218,7 +218,8 @@ span.review-category {
     padding: 5px 10px;
     margin: 0 2px;
     cursor: pointer;
-    border: 1px solid #7FC8F8;
+    border-radius: 4px;
+    background-color: var(--sidebar-bg);
     color: var(--color);
     font-weight: bold;
     transition: background-color 0.3s, color 0.3s;
