--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -117,8 +117,10 @@
 
             전반적으로, Pine Valley Campground는 가족 여행이나 친구들과의 아웃도어 활동을 위한 완벽한 장소입니다. 친절한 직원들, 잘 관리된 시설, 아름다운 자연 환경이 어우러져 최고의 캠핑 경험을 선사합니다. 다음에 또 방문하고 싶은 곳이에요!</textarea>
                     </div>
-                    <button type="button" class="editMode-submit" onclick="saveEdit()">저장</button>
-                    <button type="button" class="editMode-cancel" onclick="cancelEdit()">취소</button>
+                    <div class="edit-form-buttons">
+                        <button type="button" class="editMode-cancel" onclick="cancelEdit()">취소</button>
+                        <button type="button" class="editMode-submit" onclick="saveEdit()">저장</button>
+                    </div>
                 </form>
             </div>
 
