--- a/src/main/resources/static/css/recruitment/recruitmentMain.css
+++ b/src/main/resources/static/css/recruitment/recruitmentMain.css
@@ -29,11 +29,13 @@ body.dark {
 .review-section {
     background-color: var(--body-bg);
     border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     padding: 20px;
     margin-bottom: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 70px;
 }
 .review-section h2 {
     margin: 0;
@@ -59,26 +61,31 @@ body.dark {
 }
 .search-bar {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
     align-items: center;
+    background-color: var(--body-bg);
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    padding: 5px;
+    margin-bottom: 30px;
 }
 .search-input-wrapper {
     display: flex;
     flex-grow: 1;
-    margin-right: 10px;
-    background-color: var(--sidebar-bg);
     color: var(--color);
+    height: 100px;
+    align-items: center;
 }
 .search-input-wrapper input {
     background-color: var(--sidebar-bg);
     color: var(--color);
+    height: 30px;
 }
 .search-bar input[type="text"] {
     flex-grow: 1;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 4px 0 0 4px;
+    margin-right: 15px;
 }
 .search-bar button {
     padding: 10px 15px;
@@ -94,13 +101,14 @@ body.dark {
     color: var(--color);
     border: #bbb;
     font-weight: bold;
+    margin-right: 5px;
 }
 .search-button:hover {
     background-color: #5AA9E6;
 }
 .filter-button {
     border-radius: 4px;
-    margin-left: 10px;
+    margin-left: 5px;
     background-color: #5AA9E6;
     font-weight: bold;
 }
