✨ update - #7 부트캠프 목록가기 버튼 추가

--- a/src/main/resources/templates/recruitment/recruitmentDetail.html
+++ b/src/main/resources/templates/recruitment/recruitmentDetail.html
@@ -63,11 +63,12 @@
                             <p>- 클라우드 서비스 활용 (AWS, Azure)</p>
                         </div>
                         <textarea class="editable">- HTML, CSS, JavaScript 기초
-- React와 Node.js를 이용한 웹 애플리케이션 개발
-- 데이터베이스 설계 및 관리 (MySQL, MongoDB)
-- API 개발 및 통합
-- 버전 관리 및 협업 도구 (Git, GitHub)
-- 클라우드 서비스 활용 (AWS, Azure)</textarea>
+                            - React와 Node.js를 이용한 웹 애플리케이션 개발
+                            - 데이터베이스 설계 및 관리 (MySQL, MongoDB)
+                            - API 개발 및 통합
+                            - 버전 관리 및 협업 도구 (Git, GitHub)
+                            - 클라우드 서비스 활용 (AWS, Azure)
+                        </textarea>
                     </div>
                 </div>
                 <div class="course-sidebar">
@@ -125,6 +126,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="back-to-list-container">
+                <a th:href="@{/api/camp}" class="back-to-list-button">목록으로 가기</a>
             </div>
         </div>
     </div>
