--- a/src/main/resources/static/css/recruitment/recruitmentDetail.css
+++ b/src/main/resources/static/css/recruitment/recruitmentDetail.css
@@ -274,3 +274,22 @@ body.dark {
     margin-bottom: 5px;
     color: var(--color);
 }
+.back-to-list-container {
+    margin-top: 20px;
+    text-align: left;
+}
+
+.back-to-list-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: var(--sidebar-bg);
+    color: var(--color);
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s;
+}
+
+.back-to-list-button:hover {
+    background-color: #7FC8F8;
+}
