--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -61,7 +61,7 @@
 </div>
 <div id="questionModal" class="modal">
     <div class="modal-content">
-        <span class="close">&times;</span>
+        <span class="close" onclick="closeModal()">&times;</span>
         <h2>Ask a Question</h2>
         <form id="questionForm">
             <label for="questionTitle">Title:</label>
