🩹 fix - #14 부트캠프 추가 시 의도한 위치에 생성이 되지 않은 문제 수정

--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -104,6 +104,7 @@ body {
     border-radius: 8px;
     margin-bottom: 20px;
     overflow: hidden;
+    width: 760px;
 }
 .card-header {
     background-color: var(--body-bg);
