--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -107,7 +107,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
+            <div class="content-container">
                 <div class="activity-section">
                     <div class="section-title">활동 내역</div>
                     <div class="section-divider"></div>
