--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -157,7 +157,8 @@ header h1 {
 }
 
 .modal-content {
-    background-color: #fefefe;
+    background-color: var(--body-bg);
+    color: var(--color);
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
