--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -5,6 +5,8 @@
     --hover-bg: #e0e0e0;
     --header-color: #313030;
     --btn-color: #fff;
+    --details-color: #7FC8F8;
+    --emphasis-color: #FF6B35
 }
 
 body.dark {
@@ -14,6 +16,8 @@ body.dark {
     --hover-bg: #3A3B47;
     --header-color: #7FC8F8;
     --btn-color: #000000;
+    --details-color: #000000;
+    --emphasis-color: #ffd600
 }
 
 
@@ -139,7 +143,7 @@ header h1 {
 }
 
 .btn-details {
-    background-color: #7FC8F8;
+    background-color: var(--details-color);
     color: white;
 }
 
@@ -150,23 +154,28 @@ header h1 {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 1000;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
     background-color: rgba(0,0,0,0.4);
+    align-items: center;
+    justify-content: center;
 }
 
 .modal-content {
     background-color: var(--body-bg);
     color: var(--color);
-    margin: 15% auto;
-    padding: 20px;
+    padding: 20px 40px;
     border: 1px solid #888;
-    width: 80%;
+    border-radius: 8px;
+    margin-top: 100px;
+    margin-left: 700px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     max-width: 600px;
+    width: 90%;
 }
 
 .close {
@@ -221,12 +230,12 @@ header h1 {
 
 
 .warning-text {
-    color: #FF6B35;
+    color: var(--emphasis-color);
     font-weight: bold;
 }
 
 .emphasis-text {
-    color: #FFE45E;
+    color: var(--emphasis-color);
     font-weight: bold;
 }
 
