--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -168,14 +168,13 @@ header h1 {
 .modal-content {
     background-color: var(--body-bg);
     color: var(--color);
-    padding: 20px 40px;
+    padding: 20px;
     border: 1px solid #888;
     border-radius: 8px;
-    margin-top: 100px;
-    margin-left: 700px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s, box-shadow 0.2s;
     max-width: 600px;
-    width: 90%;
+    width: 80%;
 }
 
 .close {
