--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -58,6 +58,7 @@ body {
     border-radius: 8px;
     border: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -164,16 +165,18 @@ h1, h2 {
 
 .question-card:hover {
     transform: translateY(-5px);
-    box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
 
 .question-header {
     margin-bottom: 10px;
 }
 
-.question-and-pagination {
-    margin-left: 390px;
-    margin-right: 350px;
+.question-and-pagination, .search-container {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
 .question-title {
@@ -353,8 +356,7 @@ label {
     border: 1px solid #888;
     width: 60%;
     max-width: 800px;
-    margin-left: 650px;
-    margin-top: 100px;
+    margin: 100px auto;
     border-radius: 8px;
     box-shadow: 0 4px 8px var(--modal-shadow);
     transition: transform 0.2s, box-shadow 0.2s;
